--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mui/material": "latest",
 		"classnames": "^2.3.2",
 		"next": "latest",
+		"notistack": "^3.0.1",
 		"prop-types": "latest",
 		"react": "latest",
 		"react-dom": "latest"
