--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@mui/icons-material": "latest",
 		"@mui/material": "latest",
 		"classnames": "^2.3.2",
+		"firebase": "^10.5.2",
 		"next": "latest",
 		"notistack": "^3.0.1",
 		"prop-types": "latest",
